<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_fragment"
            android:icon="@drawable/ic_action_group"
            android:title="@string/my_groupes" />
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/ic_action_invite_group"
            android:title="@string/invitations" />
        <item
            android:id="@+id/nav_invited"
            android:icon="@drawable/ic_action_invited"
            android:title="@string/invited" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />
    </group>
</menu>
